--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-# dependencies
-/node_modules
+# Ignora la carpeta node_modules
+node_modules
+
+# Ignora todos los archivos de texto
+*.txt
+
+# Ignora los archivos relacionados a API keys
+.env
