--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "devDependencies": {
-    "nodemon": "^2.0.19"
+  "name": "test",
+  "version": "0.0.0",
+  "description": "Proyecto backend",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Augusto",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "ejs": "^3.1.8"
   }
 }
