--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Proyecto backend",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Augusto",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "socket.io": "^4.5.1"
   }
 }
