--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "knex": "^0.21.21",
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.2"
   }
 }
