--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "normalizr": "^3.6.2",
+    "firebase-admin": "^11.0.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.5.0"
   }
 }
