--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto backend",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js --port",
+    "start": "nodemon server.js --port --mode",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Augusto",
