--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.1",
+    "winston": "^3.8.2",
     "yargs": "^17.6.0"
   },
   "devDependencies": {
