--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js --port --mode",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "0x": "0x server.js",
+    "test": "node benchmark.js"
   },
   "author": "Augusto",
   "license": "ISC",
   "dependencies": {
+    "autocannon": "^7.10.0",
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
