--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "Proyecto backend",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js --port --mode",
-    "0x": "0x server.js",
-    "test": "node benchmark.js"
+    "start": "nodemon server.js --port --mode"
   },
   "author": "Augusto",
   "license": "ISC",
   "dependencies": {
-    "autocannon": "^7.10.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
