--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.1",
     "winston": "^3.8.2",
-    "yargs": "^17.6.0"
-  },
-  "devDependencies": {
+    "yargs": "^17.6.0",
     "@faker-js/faker": "^7.5.0",
     "dotenv": "^16.0.3"
   }
