--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
@@ -24,7 +26,6 @@
     "twilio": "^3.83.3",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
-    "yargs": "^17.6.0",
-    "dotenv": "^16.0.3"
+    "yargs": "^17.6.0"
   }
 }
