--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.5.4",
     "twilio": "^3.83.3",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
