--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend project",
   "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
     "dev": "nodemon server.js"
   },
   "author": "Augusto",
